--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <div id="shiftremovestartresult"></div>
 
 
-    <script src="array.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
