--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Array Operations</title>
 </head>
 <body>
-    <p>[1, 2, 3]</p>
+    <p>[1, 2, 3] add 3 values </p> 
     <button onclick="pushEndAdd()">push End Add</button>
     <div id="pushResult"></div>
 
@@ -14,7 +14,7 @@
     <br>
     <br>
 
-    <p>[5, 6, 7, 8, 18]</p>
+    <p>[5, 6, 7, 8, 18] remove 3 values </p>
     <button onclick="popRemoveEnd()">pop remove end </button>
     <div id="popResult"></div>
 
@@ -22,7 +22,7 @@
     <br>
     <br>
     
-    <p>[11, 12]</p>
+    <p>[11, 12] insert 3 values</p>
     <button onclick="unshiftInsertBeginning()">unshift Insert Beginning </button>
     <div id="unshiftResult"></div>
 
@@ -30,7 +30,7 @@
     <br>
     <br>
     <br>
-    <p>[12, 12, 12, 13, 14]</p>
+    <p>[12, 12, 12, 13, 14] remove 3 values </p>
     <button onclick="shiftRemoveStart()">shift Remove Start </button>
     <div id="shiftremovestartresult"></div>
 
