function 3 value add

--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
     <br>
     <br>
 
+
+
+    <!-- function input -->
+    <h2>Function</h2>
+    <p>Function add values</p>
+
+    <p> please enter a number for adding 3 of them </p>
+
+    <label for="inputA">Enter a value for A:</label>
+    <input type="number" id="inputA"><br><br>
+
+    <label for="inputB">Enter a value for A:</label>
+    <input type="number" id="inputB"><br><br>
+
+    <label for="inputC">Enter a value for A:</label>
+    <input type="number" id="inputC"><br><br>
+
+    <button onclick="sum()">Add </button>
+    <div id="sumtotal"></div>
   
 
 
